Connection end Entityes

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 PORT= 4000 
-//DATABASE CONFIG
-DB_HOST = localhost
-DB_USERNAME = root
-DB_PASSWORD = luan123
-DB_DATABASE = Projeto,
+
+DB_HOST=localhost
+DB_USERNAME=root
+DB_PASSWORD=luan123
+DB_DATABASE=Projeto
+DB_PORT=3306
